dataset1235/2025-2/2318198438/users/3878856075/executions/1897677159_775838323.log
== RUN (2025-08-27 05:20:54)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print("m")
soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 6
    soma os n e divide por 3
         ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 6
    soma os n e divide por 3
         ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:24:03)
-- CODE: 
n1=5
n2=4
n3=3
m=(n1+n2+n3)/3
print(m)
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:21:02)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print("m")
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
m
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
m
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:15:45)
-- CODE: 
#some os tres valores e divida por ele msm
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:16:18)
-- CODE: 
#some os tres valores e divida por ele msm
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:21:36)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:21:59)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:20:35)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3

soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 6
    soma os n e divide por 3
         ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 6
    soma os n e divide por 3
         ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:18:12)
-- CODE: 
#some os tres valores e divida por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:20:01)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 6
    soma os n e divide por 3
         ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 6
    soma os n e divide por 3
         ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:22:24)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(int."m")
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 5
    print(int."m")
              ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 5
    print(int."m")
              ^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:21:18)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:22:35)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:21:55)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3//3
print(m)
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:22:29)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(int.m)
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int.m)
          ^^^^^
AttributeError: type object 'int' has no attribute 'm'
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int.m)
          ^^^^^
AttributeError: type object 'int' has no attribute 'm'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:17:33)
-- CODE: 
#some os tres valores e divida por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:21:42)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3
print(m)
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
12
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 05:18:23)
-- CODE: 
#some os tres valores e divida por 3
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 05:25:50)
-- CODE: 
n1=5
n2=4
n3=3
m=(n1+n2+n3)/3
print(m)
#soma os n e divide por 3
#o primeiro caso deu dez por que foi feito primeiro a divisao dps a soma 
#o segundo foi como eu pensei q fosse dar o primeiro 
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:18:26)
-- CODE: 
#some os tres valores e divida por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:25:46)
-- CODE: 
n1=5
n2=4
n3=3
m=(n1+n2+n3)/3
print(m)
#soma os n e divide por 3
#o primeiro caso deu dez por que foi feito primeiro a divisao dps a soma 
#o segundo foi como eu pensei q fosse dar o primeiro 
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:19:33)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print("m")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
m
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
m
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:22:18)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(int.m)
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int.m)
          ^^^^^
AttributeError: type object 'int' has no attribute 'm'
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int.m)
          ^^^^^
AttributeError: type object 'int' has no attribute 'm'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:21:47)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:22:19)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(int.m)
#soma os n e divide por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int.m)
          ^^^^^
AttributeError: type object 'int' has no attribute 'm'
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(int.m)
          ^^^^^
AttributeError: type object 'int' has no attribute 'm'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 05:17:07)
-- CODE: 
#some os tres valores e divida por 3
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
